# AITrader

./: .copilot-instructions.md  .dockerignore  .dockerignore.bak  .dockerignore.fast  .env.example  .gitignore  Dockerfile.frontend  Dockerfile.mockmcp  Dockerfile.onnx_runner  README.md  docker-compose.dev-fullstack.yml  docker-compose.dev.yml  docker-compose.fast.yml  docker-compose.frontend-only.yml  docker-compose.gpu.yml  docker-compose.local.override.yml  docker-compose.nohostports.yml  docker-compose.production.yml  docker-compose.yml  mcp-server.js  package-lock.json  package.json  requirements.cpu.txt  requirements.dev.txt  requirements.txt  setup.py  small_gpu_test.py  test_cuda.py  test_db.py
.github/: FRONTEND_INSTRUCTIONS.md  copilot-instructions.md
backend/: Dockerfile  README.md  __init__.py  main.py  requirements.txt  ws_broadcaster.py
db/: init_db.py  inti_db.py  schema.sql
docs/: BUILD_LARGE_FILES.md  CHANGELOG.md  MAINTENANCE.md  PROJECT_STATUS.md  README.md  fast-builds.md
finbert_server/: Dockerfile  README.md  __init__.py  app.py  requirements.txt
frontend/: Dockerfile  README.md  (+12 more)
pattern_engine/: Cargo.toml  Dockerfile  README.md  __init__.py  config.py  onnx_entrypoint.sh  onnx_runner.py  partitioning.py  pattern_detector.py  runner.py  rust_adapter.py  state.py  trt_engine.py
pattern_engine/pyo3_wrapper/: Cargo.toml  README.md
pattern_engine/pyo3_wrapper/src/: lib.rs
pattern_engine/src/: incremental.rs  lib.rs  main.rs  onnx_client.rs  patterns.rs  publisher.rs  replay.rs
pattern_engine/tests/: replay_tests.rs  smoke_pytest.py
(+179 files in other folders)
