[package]
name = "pattern_engine"
version = "0.1.0"
edition = "2021"

[features]
default = []
onnx = ["ort"]

[dependencies]
tokio = { version = "1.0", features = ["full"] }
redis = { version = "0.23", features = ["tokio-comp", "streams"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = "0.6"
tower = "0.4"
tower-http = { version = "0.4", features = ["cors"] }
hyper = "0.14"
reqwest = { version = "0.11", features = ["json"] }
ort = { version = "1.16", optional = true }
rand = "0.8"
tokio-stream = { version = "0.1", features = ["net"] }
async-trait = "0.1"

[dev-dependencies]
tempfile = "3.5"
